# ising-resource-allocation

./: .gitignore  app.py  generate_data.py  ising.py  pyproject.toml
